--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.14.0",
+    "@aws-sdk/client-transcribe-streaming": "^3.990.0",
+    "@aws-sdk/credential-providers": "^3.990.0",
     "aws-amplify": "^6.16.2",
+    "microphone-stream": "^6.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-node-polyfills": "^0.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
